# Customer-Support

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml  pyrightconfig.json  run.ps1
agents/: baseline_agent.py
scripts/: run_baseline.py
server/: Dockerfile  app.py  customer_support_environment.py  data.py  models.py  requirements.txt
server/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: conftest.py  test_api.py  test_graders.py
